front-end/src/styles/NavTop.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');

* {
    padding: 0;
    margin: 0;
}

.mobile {
    width: 100%;
    display: none;
    z-index: 5;
    background-color: #393E46;
}

.mobile a {
    color: #ECF2FF;
}

.mobile i {
    color: #ECF2FF;
    font-size: x-large;
}

.nav {
    display: flex;
    justify-content: space-between;
    width: 100%;
    background-color: #393E46;
}

.nav .show-tab a, .nav .title {
    color: #ECF2FF;
}

.hidden-dashboard {
    display: none;
    background-color: #393E46;
    border-radius: 20px;
    box-shadow: 10px 5px 10px 5px #636262;
    position: absolute;
    top: 90px;
    right: 10px;
    width: 200px;
}

.hidden-dashboard ul {
    display: flex;
    flex-direction: column;
}

.hidden-dashboard a {
    color: #ECF2FF;
}

.b-bar {
    display: none;
    height: 45px;
    width: 100%;
    background-color: #F0EEED;
    display: none;
    justify-content: space-between;
    position: fixed; 
    bottom: 0;
}

.b-bar .b-tab {
    display: block;
    width: 20%;
    background-color: #F0EEED;
    padding-top: 5px;
    padding-bottom: 5px;
}

.b-bar .b-tab span {
    font-size:x-small;
    display: flex;
    align-items: center;
    justify-content: center;
    padding-top: 4px;
}

.b-bar .b-tab div {
    display: flex;
    align-items: center;
    justify-content: center;
}

.b-bar .b-tab svg {
    height: 20px;
    border-radius: 5px;
}

.s-tab {
    background-color: red;
}

.d-tab {
    border-right-color: #F0EEED;
}

@media only screen and (max-width: 950px) {
    .hidden-dashboard {
        top: 110px;
    }
    
    .mobile {
        display: flex;
        justify-content: space-between;
    }

    .nav-l .name {
        display: none;
    }

    .nav {
        display: none;
        position: absolute;
        top: 45px;
        width: 20%;
        box-shadow: 5px 2px 5px 2px #636262;
    }

    .nav ul {
        display: flex;
        flex-direction: column;
        margin: auto;
    }

    .nav .title {
        display: none;
    }
}

@media only screen and (max-width: 430px) {
    .mobile .more {
        display: none;
    }

    .b-bar {
        display: flex;
        bottom: 0;
    }

    .logo {
        display: block;
    }
}

@media only screen and (max-width: 180px) {
    .b-bar .b-tab span{
        display: none;
    }
}

